--- a/Day33_Data_Cleaning_Day2.ipynb
+++ b/Day33_Data_Cleaning_Day2.ipynb
@@ -109,20 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "e5868674",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_cleaned =(\n",
-    "      df.pipe(remove_outliers, column = \"Salary\")\n",
+    "      df\n",
+    "      .pipe(remove_outliers, column = \"Salary\")\n",
     "      .pipe(remove_outliers, column = \"Age\")\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "c6925abb",
    "metadata": {},
    "outputs": [
@@ -301,7 +302,7 @@
        "19  20   55  200000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "a3c9c00f",
    "metadata": {},
    "outputs": [
@@ -477,7 +478,7 @@
        "17  18   41   55551"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "ff342164",
    "metadata": {},
    "outputs": [],
